# Nonogram-Solver

./: .gitignore  CMakeLists.txt  imgui.ini
Nonogram Solver/: CMakeLists.txt  main.cpp
Nonogram Solver Core/: CMakeLists.txt  imgui.ini  main.cpp
Nonogram Solver Core/Algorithm/Backtrack/BacktrackAlgorithm/: BacktrackAlgorithm.cpp  BacktrackAlgorithm.h  imgui.ini
Nonogram Solver Core/Algorithm/DeterministicSolve/: IDeterministicSolve.h
Nonogram Solver Core/Algorithm/ExhaustivePlacementPatternFindAlgorithm/: ExhaustivePlacementPatternFindAlgorithm.cpp
Nonogram Solver Core/Algorithm/FindLeftMostPlacementAlgorithm/: FindLeftMostPlacementAlgorithm.cpp
Nonogram Solver Core/Algorithm/PlacementPatternCountAlgorithm/: PlacementPatternCountAlgorithm.cpp  PlacementPatternCountAlgorithm.h
Nonogram Solver Core/Board/Board/: Board.cpp
Nonogram Solver Core/Board/BoardLength/: BoardLength.cpp  ColumnLength.cpp  RowLength.cpp
Nonogram Solver Core/Board/Line/: Column.cpp  Column.h
Nonogram Solver Core/Board/NonogramBoard/: NonogramBoard.cpp  NonogramBoard.h
Nonogram Solver Core/Cell/Cell/: Cell.cpp
Nonogram Solver Core/Cell/CellVector2D/: CellVector2D.h
Nonogram Solver Core/Hint/HintSet/: HintSet.h
Nonogram Solver Core/Hint/HintSetList/: ColumnHintSetList.h
Nonogram Solver Core/Index/CellIndex/: CellIndex.cpp  CellIndex.h  CellIndexType.h  ColumnIndex.cpp  ColumnIndex.h  RowIndex.h
Nonogram Solver Core/Placement/Placement/: ColumnPlacement.cpp  ColumnPlacement.h  Placement.h  RowPlacement.cpp  RowPlacement.h
Nonogram Solver Core/Placement/PlacementCountList/: ColumnPlacementCountList.h  PlacementCountList.cpp  PlacementCountList.h
Nonogram Solver Core/Rendering/FontData/: FontData.cpp
Nonogram Solver Core/Rendering/HighlightIndexes/: HighlightIndexes.cpp  HighlightIndexes.h
Nonogram Solver Core/Rendering/RenderingSystem/: RenderingSystem.cpp  imgui.ini
Nonogram Solver Core/Rendering/TableRenderer/: TableRenderer.cpp
Nonogram Solver Core/SampleData/Repository/: SampleDataRepository.cpp
Nonogram Solver Core/SampleData/SampleData/: SampleDataDifficult.cpp  SampleDataLambda.cpp  SampleDataLarge.cpp
Nonogram Solver Core/Shared/SharedBacktrackBoard/: SharedBacktrackBoard.cpp  SharedBacktrackBoard.h
Nonogram Solver Core/Shared/SharedBacktrackStack/: SharedBacktrackStack.cpp  SharedBacktrackStack.h
Nonogram Solver Core/TestData/Repository/: TestDataRepository.cpp  TestDataRepository.h
Nonogram Solver Core/TestData/TestData/: TestDataDifficult.cpp  TestDataEasy.cpp  TestDataLambda.cpp  TestDataLarge.cpp
Nonogram Solver Core/gl/include/glad/: glad.h
Nonogram Solver Core/gl/src/: glad.c
Nonogram Solver Test/: CMakeLists.txt  OverlapDetermination.cpp  PlacementPatternCount.cpp
bench/: CMakeLists.txt  bench_main.cpp
src/: CMakeLists.txt  main.cpp
src/Algorithm/DeterministicSolve/: IDeterministicSolve.h
src/Algorithm/ExhaustivePlacementPatternFindAlgorithm/: ExhaustivePlacementPatternFindAlgorithm.h
src/Algorithm/FindLeftMostPlacementAlgorithm/: FindLeftMostPlacementAlgorithm.cpp  FindLeftMostPlacementAlgorithm.h
src/Algorithm/FindRightMostPlacementAlgorithm/: FindRightMostPlacementAlgorithm.cpp  FindRightMostPlacementAlgorithm.h
src/Algorithm/ISolverContext/: ISolverContext.h
src/Algorithm/OverlapDeterminationAlgorithm/: OverlapDeterminationAlgorithm.cpp  OverlapDeterminationAlgorithm.h
src/Algorithm/PlacementPatternCountAlgorithm/: PlacementPatternCountAlgorithm.cpp
src/Board/: Orientation.h
src/Board/BacktrackBoard/: BacktrackBoard.cpp  BacktrackBoard.h
src/Board/Board/: Board.cpp  Board.h
src/Board/BoardLength/: BoardLength.h  ColumnLength.h  RowLength.h
src/Board/Line/: Column.cpp  Line.cpp  Line.h  Row.cpp  Row.h
src/Board/NonogramBoard/: NonogramBoard.h
src/Cell/Cell/: Cell.cpp  Cell.h
src/Cell/CellChange/: CellChange.cpp  CellChange.h
src/Cell/CellLocation/: CellLocation.cpp  CellLocation.h
src/Hint/HintNumber/: HintNumber.cpp
src/Hint/HintSet/: HintSet.cpp  HintSet.h
src/Hint/HintSetList/: ColumnHintSetList.cpp  ColumnHintSetList.h  HintSetList.cpp  HintSetList.h  RowHintSetList.cpp  RowHintSetList.h
src/Index/CellIndex/: CellIndex.cpp  CellIndex.h  ColumnIndex.cpp  RowIndex.cpp  RowIndex.h
src/Index/Coordinate/: Coordinate.cpp  Coordinate.h
src/Placement/Placement/: ColumnPlacement.cpp  ColumnPlacement.h  Placement.cpp  Placement.h  RowPlacement.cpp  RowPlacement.h
src/Placement/PlacementCount/: PlacementCount.cpp
src/Placement/PlacementCountList/: ColumnPlacementCountList.cpp  ColumnPlacementCountList.h  PlacementCountList.cpp  PlacementCountList.h  RowPlacementCountList.cpp  RowPlacementCountList.h
src/Rendering/FontData/: FontData.cpp
src/Rendering/HighlightIndexes/: HighlightIndexes.h
src/Rendering/RenderingSystem/: RenderingSystem.cpp
src/Rendering/TableRenderer/: TableRenderer.cpp  TableRenderer.h
src/SampleData/Repository/: SampleDataRepository.cpp  SampleDataRepository.h
src/SampleData/SampleData/: SampleDataDifficult.cpp  SampleDataEasy.cpp  SampleDataLambda.cpp  SampleDataLarge.cpp
src/Shared/: IReceiver.h  ISender.h  SharedData.h  SharedDataAliases.h
src/Shared/SharedBacktrackBoard/: SharedBacktrackBoard.cpp  SharedBacktrackBoard.h
src/Shared/SharedBacktrackStack/: SharedBacktrackStack.cpp  SharedBacktrackStack.h
src/Shared/SharedHighlightIndexes/: SharedHighlightIndexes.cpp  SharedHighlightIndexes.h
src/Shared/StopSignal/: IStopSignal.h  StopSignal.cpp  StopSignal.h
src/Solver/: DFSResult.h
src/Solver/DeterministicSolver/: DeterministicSolverResult.h  IDeterministicSolver.h
src/Solver/ExhaustivePlacementPatternFinder/: IExhaustivePlacementPatternFindAlgorithm.h
src/Solver/LeftmostPlacementFinder/: ILeftmostPlacementFinder.h
src/Solver/LineSolver/: ILineSolver.h
src/Solver/PlacementPatternCounter/: IPlacementPatternCounter.h
src/Solver/RightmostPlacementFinder/: IRightmostPlacementFinder.h
src/Solver/Solver/: ISolver.h
src/gl/src/: glad.c
test/: CMakeLists.txt  FindPlacementPatternExhaustive.cpp  PlacementPatternCount.cpp
(+37 files in other folders)
